// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionSection renders correctly with required props 1`] = `

<div class="govuk-accordion__section">
  <div class="govuk-accordion__section-header">
    <h2 class="govuk-accordion__section-heading">
      <span class="govuk-accordion__section-button">
        Test heading
      </span>
    </h2>
  </div>
  <div class="govuk-accordion__section-content">
    <p>
      Test content
    </p>
    <div>
      <a href="#application"
         class="govuk-link govuk-link--no-visited-state"
      >
        Go to top
      </a>
    </div>
  </div>
</div>

`;

exports[`AccordionSection renders with caption 1`] = `

<div class="govuk-accordion__section">
  <div class="govuk-accordion__section-header">
    <h2 class="govuk-accordion__section-heading">
      <span class="govuk-accordion__section-button">
        Test heading
      </span>
    </h2>
    <span class="govuk-accordion__section-summary">
      Some caption text
    </span>
  </div>
  <div class="govuk-accordion__section-content">
    <p>
      Test content
    </p>
    <div>
      <a href="#application"
         class="govuk-link govuk-link--no-visited-state"
      >
        Go to top
      </a>
    </div>
  </div>
</div>

`;

exports[`AccordionSection renders with different heading size 1`] = `

<div class="govuk-accordion__section">
  <div class="govuk-accordion__section-header">
    <h3 class="govuk-accordion__section-heading">
      <span class="govuk-accordion__section-button">
        Test heading
      </span>
    </h3>
  </div>
  <div class="govuk-accordion__section-content">
    <p>
      Test content
    </p>
    <div>
      <a href="#application"
         class="govuk-link govuk-link--no-visited-state"
      >
        Go to top
      </a>
    </div>
  </div>
</div>

`;
